DADAO-misc: rewrite Makefile
Signed-off-by: Guan Xuetao <gxt@pku.edu.cn>

--- a/DADAO-misc/Makefile
+++ b/DADAO-misc/Makefile
@@ -2,7 +2,6 @@
 # Makefile for DADAO-misc
 #
 DIR_DADAO_TOP		:= $(HOME)/DADAO
-DIR_DADAO_MISC		:= $(DIR_DADAO_TOP)/DADAO-misc
 
 DIR_DADAO_BUILD		:= $(DIR_DADAO_TOP)/__build
 DIR_DADAO_INSTALL	:= $(DIR_DADAO_TOP)/__install
@@ -18,51 +17,40 @@ DD_QEMU_SYS		:= $(DIR_DADAO_INSTALL)/bin/qemu-system-dadao
 
 all:
 	@echo ""
-	@echo "DADAO-misc"
+	@echo "DADAO-misc: test-gas-highfive test-gcc-highfive test-qemu-run"
 	@echo ""
 
+TEST_SRCDIR		:= $(DIR_DADAO_TOP)/DADAO-misc
+TEST_DSTDIR		:= $(DIR_DADAO_INSTALL)/test
+
 TEST_GAS_NAME		:= insn-simple
+TEST_GAS_FLAGS		:= -o $(TEST_DSTDIR)/$(TEST_GAS_NAME).o
 
-TESTFILE_NAME		:= conftest
-TESTFILE_SRCDIR		:= $(DIR_DADAO_MISC)
-TESTFILE_DSTDIR		:= $(DIR_DADAO_INSTALL)/test
-
-TESTFILE_SRC		:= $(TESTFILE_SRCDIR)/$(TESTFILE_NAME).c
-TESTFILE_DST		:= $(TESTFILE_DSTDIR)/$(TESTFILE_NAME)
-TESTFILE_ELF		:= $(TESTFILE_DSTDIR)/$(TESTFILE_NAME).elf
-TESTFILE_DUMP		:= $(TESTFILE_DSTDIR)/$(TESTFILE_NAME).dump
-
-TESTFILE_CFLAGS		:= -g -O2 -save-temps
-#TESTFILE_CFLAGS		:= -g -O2 -save-temps -fdump-tree-all -fdump-ipa-all -fdump-rtl-all
-
-TESTFILE_LOG		:= $(TESTFILE_DSTDIR)/$(TESTFILE_NAME).log
-
-TESTFILE_CFLAGS_EXTRA	:=
-#TESTFILE_CFLAGS_EXTRA	:=							\
+TEST_GCC_NAME		:= conftest
+TEST_GCC_FLAGS		:= -o $(TEST_DSTDIR)/$(TEST_GCC_NAME) -g -O2 -save-temps
+#TEST_GCC_FLAGS		:= -o $(TEST_DSTDIR)/$(TEST_GCC_NAME) -g -O2 -save-temps -fdump-tree-all -fdump-ipa-all -fdump-rtl-all
+TEST_GCC_FLAGS_EXTRA	:=
+#TEST_GCC_FLAGS_EXTRA	:=							\
 		-B$(DIR_DADAO_BUILD)/gcc-0903/./gcc/				\
 		-B$(DIR_DADAO_INSTALL)/dadao-linux-elf/bin/			\
 		-B$(DIR_DADAO_INSTALL)/dadao-linux-elf/lib/			\
 		-isystem $(DIR_DADAO_INSTALL)/dadao-linux-elf/include		\
 		-isystem $(DIR_DADAO_INSTALL)/dadao-linux-elf/sys-include	\
 
+TEST_QEMU_TARGET	:= $(TEST_DSTDIR)/$(TEST_GCC_NAME)
+TEST_QEMU_LOG		:= $(TEST_DSTDIR)/$(TEST_GCC_NAME).log
+
 test-gas-highfive:
-	test -d $(TESTFILE_DSTDIR) || mkdir -p $(TESTFILE_DSTDIR)
-	cd $(TESTFILE_DSTDIR);							\
-		$(DD_GAS)							\
-			-o $(TESTFILE_DSTDIR)/$(TEST_GAS_NAME).o		\
-			$(TESTFILE_SRCDIR)/$(TEST_GAS_NAME).s
-	$(DD_READELF) -a $(TESTFILE_DSTDIR)/$(TEST_GAS_NAME).o > $(TESTFILE_DSTDIR)/$(TEST_GAS_NAME).elf
-	$(DD_OBJDUMP) -d $(TESTFILE_DSTDIR)/$(TEST_GAS_NAME).o > $(TESTFILE_DSTDIR)/$(TEST_GAS_NAME).dump
+	test -d $(TEST_DSTDIR) || mkdir -p $(TEST_DSTDIR)
+	$(DD_GAS) $(TEST_GAS_FLAGS) $(TEST_SRCDIR)/$(TEST_GAS_NAME).s
+	$(DD_READELF) -a $(TEST_DSTDIR)/$(TEST_GAS_NAME).o > $(TEST_DSTDIR)/$(TEST_GAS_NAME).elf
+	$(DD_OBJDUMP) -d $(TEST_DSTDIR)/$(TEST_GAS_NAME).o > $(TEST_DSTDIR)/$(TEST_GAS_NAME).dump
 
-testfile-highfive:
-	test -f $(TESTFILE_SRC) || exit
-	test -d $(TESTFILE_DSTDIR) || mkdir -p $(TESTFILE_DSTDIR)
-	cd $(TESTFILE_DSTDIR);							\
-		$(DD_GCC)							\
-			$(TESTFILE_CFLAGS) $(TESTFILE_CFLAGS_EXTRA)		\
-			-o $(TESTFILE_DST) $(TESTFILE_SRC)
-	$(DD_READELF) -a $(TESTFILE_DST) > $(TESTFILE_ELF)
-	$(DD_OBJDUMP) -d $(TESTFILE_DST) > $(TESTFILE_DUMP)
+test-gcc-highfive:
+	test -d $(TEST_DSTDIR) || mkdir -p $(TEST_DSTDIR)
+	$(DD_GCC) $(TEST_GCC_FLAGS) $(TEST_GCC_FLAGS_EXTRA) $(TEST_SRCDIR)/$(TEST_GCC_NAME).c
+	$(DD_READELF) -a $(TEST_DSTDIR)/$(TEST_GCC_NAME).o > $(TEST_DSTDIR)/$(TEST_GCC_NAME).elf
+	$(DD_OBJDUMP) -d $(TEST_DSTDIR)/$(TEST_GCC_NAME).o > $(TEST_DSTDIR)/$(TEST_GCC_NAME).dump
 
-testfile-run:
-	$(DD_QEMU_USER) -singlestep -strace -D $(TESTFILE_LOG) $(TESTFILE_DST)
+test-qemu-run:
+	$(DD_QEMU_USER) -singlestep -strace -D $(TEST_QEMU_LOG) $(TEST_QEMU_TARGET)
